--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>扎小人 - 灵异版</title>
+    <title>扎小人 - Q版</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>扎小人 <span class="subtitle">灵异版</span></h1>
+            <h1>扎小人 <span class="subtitle">Q版</span></h1>
             <div class="smoke-effect"></div>
         </div>
         
